--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
@@ -12,8 +13,10 @@
     "express": "~4.16.0",
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
+    "jest": "^23.6.0",
     "mongoose": "^5.3.14",
     "morgan": "~1.9.0",
-    "pug": "^2.0.0-beta11"
+    "pug": "^2.0.0-beta11",
+    "supertest": "^3.3.0"
   }
 }
